# FMS

./: CMakeLists.txt  a  b  fms-import.cmake.in
affinity/: affinity.c
cmake/: compiler_flags_Clang_C.cmake  compiler_flags_Cray_Fortran.cmake  compiler_flags_GNU_C.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_C.cmake  compiler_flags_Intel_Fortran.cmake  fms_compiler_flags.cmake
fms/: fms.F90  fms_io.F90
include/: fms_platform.h
mpp/: affinity.c
mpp/include/: mpp_comm_mpi.inc  mpp_do_update_ad.h
tracer_manager/: tracer_manager.F90
